2001-12-13  Kevin Vandersloot <kfv101@psu.edu>

	* procman.schemas: create gconf schemas file

	* Makefile.am: install schemas file

	* procman.c, proctable.c: get rid of my custom default handling now that
	we have a schemas file.

2001-12-11  Kevin Vandersloot <kfv101@psu.edu>

	* prettytable.c: get rid of deprecated gnome_datadir_file

	* procdialogs.c: port the root dialog to gtk_dialog. Procman
	is now 100% pure GNOME 2.0. Also indicate the nice level 
	of the selected process initially in the renice dialog.

	* Makefile.am: add GNOME_DISABLE_DEPRECATED

2001-12-11  Kevin Vandersloot <kfv101@psu.edu>

	* compile with GTK_DISABLE_DEPRECATED. Also remove all
	gnome_dialogs except for the root stuff

2001-12-07  Alexander Larsson  <alla@lysator.liu.se>

	* src/interface.c:
	Make window and upper part of system view not shrinkable.

2001-12-03  Kevin Vandersloot <kfv101@psu.edu>

	* prettytable.c: unref the tmp_pixbuf to plug leak

	* memmaps.c: fix mem leaks

2001-12-02  Kevin Vandersloot <kfv101@psu.edu>

	* procman.c: add gconf notifyers for most of the config values
	Tricky part will be hidden processes

2001-11-29  Kevin Vandersloot <kfv101@psu.edu>

	* proctable.[c,h]: fix up issues with recent changes to columns

	* release 1.1.1

2001-11-18  Kevin Vandersloot <kfv101@psu.edu>

	* prettytable.c: clean up some code, remove some hackery,
	make things better. That accomplished, could I ever be
	evil? Bring back hardcoded icons.
	
	* proctable.c: ditto. Make things better.

2001-11-18  Kevin Vandersloot <kfv101@psu.edu>

	* proctable.c: don't display "icon" for the icon column header.
	Some minor cleanups also

	* procdialogs.c: if treeview doesn't return a name for the
	column then it's the icon column

	* interface.c: remove underlines from optionmenu since they
	don't seem to work

2001-11-18  Kevin Vandersloot <kfv101@psu.edu>

	* proctable.c: make insert_info_to_tree and remove_info_from_tree
	external functions. New function to find a process given a name