@@ -166,9 +166,11 @@ static void
 close_memmaps_dialog (GtkDialog *dialog, gint id, gpointer data)
 {
 	GtkWidget *tree = data;	
+	GConfClient *client;
 	gint timer;
 	
-	procman_save_tree_state (tree, "/apps/procman/memmapstree");
+	client = g_object_get_data (G_OBJECT (tree), "client");
+	procman_save_tree_state (client, tree, "/apps/procman/memmapstree");
 	
 	timer = GPOINTER_TO_INT (g_object_get_data (G_OBJECT (tree), "timer"));
 	gtk_timeout_remove (timer);
@@ -213,7 +215,7 @@ create_memmaps_tree (ProcData *procdata)
 					        0,
 					        GTK_SORT_ASCENDING);*/
 					      
-	procman_get_tree_state (tree, "/apps/procman/memmapstree");
+	procman_get_tree_state (procdata->client, tree, "/apps/procman/memmapstree");
 	
 	return tree;
 		
@@ -286,6 +288,7 @@ create_single_memmaps_dialog (GtkTreeModel *model, GtkTreePath *path,
 	tree = create_memmaps_tree (procdata);
 	gtk_container_add (GTK_CONTAINER (scrolled), tree);
 	g_object_set_data (G_OBJECT (tree), "selected_info", info);
+	g_object_set_data (G_OBJECT (tree), "client", procdata->client);
 	
 	gtk_box_pack_start (GTK_BOX (dialog_vbox), scrolled, TRUE, TRUE, 0);
 	gtk_widget_show_all (scrolled);
