@@ -1,3 +1,10 @@
+2001-12-30  Kevin Vandersloot <kfv101@psu.edu>
+
+	* clean up gconfclient usage by including the client in
+	the procdata structure
+
+	* procman.c, interface.c: remove debug spewage about timings
+
 2001-12-13  Kevin Vandersloot <kfv101@psu.edu>
 
 	* procman.schemas: create gconf schemas file
